# resume_project

./: .gitignore  CMakeLists.txt  JobApplicationManager.pro  README.md  app_utils.h  company_add_window.cpp  company_add_window.h  company_model.h  company_window.cpp  company_window.h  create_dmg.sh  database_utils.h  first_window.cpp  first_window.h  main.cpp  num_issue_window.cpp  num_issue_window.h  qt_resume.pro  resources.qrc  resume_project  type_qualification_window.cpp  type_qualification_window.h  write_resume_window.cpp  write_resume_window.h
.xcode/XCBuildData/8bc17538223cd327c6cebbfbe7fd646d.xcbuilddata/: description.msgpack  manifest.json  target-graph.txt  task-store.msgpack
.xcode/XCBuildData/9f1f51a9078deab876c43ae1d3b52043.xcbuilddata/: description.msgpack  manifest.json  task-store.msgpack
.xcode/XCBuildData/a4fa3ba2d09c213cbe5601b68800d8c3.xcbuilddata/: description.msgpack  manifest.json  task-store.msgpack
.xcode/XCBuildData/b400e10bc87a5a354e7ebf60e08248c0.xcbuilddata/: description.msgpack  manifest.json  task-store.msgpack
.xcode/XCBuildData/b91a8275bcfb60a6c7ae4ee944c82cff.xcbuilddata/: description.msgpack  manifest.json  task-store.msgpack
JobApplicationManager.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
JobApplicationManager.xcodeproj/xcshareddata/xcschemes/: JobApplicationManager.xcscheme
cmake-build/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
cmake-build/JobApplicationManager.xcodeproj/: project.pbxproj
cmake-build/JobApplicationManager_autogen/: mocs_compilation.cpp
(+11 files in other folders)
